# c-projects

Bakery/: CMakeLists.txt  README.md  UI.c  main.c  materials.c  repo.c  service.c  test.c  test.h  tests.c
Bakery/header files/: material.h  repo.h  service.h  tests.h
Parking Manager/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  repo.cpp  repo.h  ui_mainwindow.h  vehicles.txt
Weather/: CMakeLists.txt  Controller.cpp  FileRepo.cpp  Iterator.cpp  List.cpp  Repo.cpp  Utils.cpp  main.cpp
Weather/GUI/: mainwindow.cpp
Weather/GUI/headers/: mainwindow.h
Weather/GUI/ui_headers/: ui_mainwindow.h
Weather/headers/: Controller.h  FileRepo.h  Iterator.h  List.h  Repo.h
Weather/input files/: tutorials.txt  watchlist.csv  watchlist.html
YouTube Playlist Manager/: CMakeLists.txt  CSVRepo.cpp  Controller.cpp  HTMLRepo.cpp  Iterator.cpp  README.md  Repo.cpp  Tests.cpp  Tutorial.cpp  UI.cpp  Validator.cpp  main.cpp
YouTube Playlist Manager/GUI/: PlayButtonDelegate.cpp  TutorialModel.cpp  adminadddialog.cpp  adminremovedialog.cpp  adminupdatedialog.cpp  adminwindow.cpp  diagram.cpp  mainwindow.cpp  userwindow.cpp
YouTube Playlist Manager/GUI/headers/: PlayButtonDelegate.h  TutorialModel.h  Undo.h  adminadddialog.h  adminremovedialog.h  adminupdatedialog.h  adminwindow.h  diagram.h  mainwindow.h  userwindow.h
YouTube Playlist Manager/GUI/ui_headers/: ui_adminadddialog.h  ui_adminremovedialog.h  ui_adminupdatedialog.h  ui_adminwindow.h  ui_diagram.h  ui_mainwindow.h  ui_userwindow.h
YouTube Playlist Manager/headers/: CSVRepo.h  Controller.h  HTMLRepo.h  IFileRepo.h  Iterator.h  Repo.h  Tests.h  Tutorial.h  UI.h  Utils.h  Validator.h
YouTube Playlist Manager/input files/: tutorials.txt  watchlist.csv  watchlist.html
